sandbox/output
GildedRose.java:11: error: cannot find symbol
            ItemStrategy itemStrategy = StrategyFactory.create(items[i].name);
            ^
  symbol:   class ItemStrategy
  location: class GildedRose
StrategyFactory.java:12: error: cannot find symbol
           return new StrategyBackstage();  
                      ^
  symbol:   class StrategyBackstage
  location: class StrategyFactory
StrategyFactory.java:15: error: cannot find symbol
        return new StrategyNormalItem();  
                   ^
  symbol:   class StrategyNormalItem
  location: class StrategyFactory
3 errors
